--- a/hecker-parallel/skript.latex
+++ b/hecker-parallel/skript.latex
@@ -148,7 +148,7 @@
 
 \title{Parallele Algorithmen}
 \author{Prof.\,Dr.\,Hans-Dietrich Hecker}
-\date{SS 2005}
+\date{SS 2005 / 2007}
 \maketitle
 
 \clearpage
@@ -2125,15 +2125,18 @@ Algo. Baumkontraktion
 INPUT: Baum,
 OUTPUT: Reduktion auf Wurzel und linkeste und rechteste Blatt
 begin
-\begin{Verbatim}
+\begin{algorithm}
+\dontprintsemicolon
+\caption{Algorithmus: Baumkontraktion}
 markiere alle Blätter von A (Array der Blätter) (ohne linkeste und rechteste) wachsend von links
 nach rechts; über parallel Prefix mit gewicht w(v) = 0 wenn v innerer
 Knoten, w(v)=1 wenn v Blatt; Eulertour
-for \lseil \log n+1\rseil do
-RAKE auf $A_{odd} = \{v_{i}: i odd\}$, die linke Söhne sind
-RAKE auf Rest von $A_{odd}$
-A := $A_{even}$
-\end{Verbatim}
+\For {$\lseil$ \log n+1$\rseil$} {
+  RAKE auf $A_{odd} = \{v_{i}: i odd\}$, die linke Söhne sind;
+  RAKE auf Rest von $A_{odd}$;
+  A := $A_{even}$;
+}
+\end{algorithm}
 end.
 
 % Hier fehlt was!
@@ -2161,18 +2164,21 @@ Algo: "`Rang-Min:
 Input: $B^{n}, n=2^{l}$
 OUTPUT: vollständiger Binärbaum mit den Arrays P,S
 begin
-\begin{Verbatim}
-for j=1 to n pardo
-P(0,j) := B(j)
-S(0,j) := B(j)
-for h=1 to log(n) do
-for j=1 to n/$2^{h}$ pardo
-# h ist das Level von den Blättern an (h=0)
-Merge(P(h-1,2j-1) mit P(h-1,2j) zu P(h,j)
-
+\begin{algorithm}
+\dontprintsemicolon
+\Forpar {j:=1 \KwTo n} {
+   P(0,j) := B(j);
+   S(0,j) := B(j);
+}
+\For {h:=1 \KwTo log(n)} {
+  \For {j:=1 \KwTo n/$2^{h}$} {
+  # h ist das Level von den Blättern an (h=0)
+  Merge(P(h-1,2j-1) mit P(h-1,2j) zu P(h,j);
+  }
+}
 Merge: Kopiere erstes Array und für alle Elemente des zweiten Arrays das
-Minimum des Elements und des letzten Elements des ersten Array ein
-\end{Verbatim}
+Minimum des Elements und des letzten Elements des ersten Array ein;
+\end{algorithm}
 end.
 
 Analyse: \Time: $O(\log n)$
