--- a/hecker-parallel/skript.latex
+++ b/hecker-parallel/skript.latex
@@ -2127,15 +2127,16 @@ Verbesserung gegenüber dem Seriellen darstellt.
 \KwOut{Reduktion auf Wurzel und linkestes und rechtestes Blatt}
 \dontprintsemicolon
 \caption{Algorithmus: Baumkontraktion}
-  markiere alle Blätter von A (Array der Blätter) (ohne linkeste %
-   und rechteste) wachsend von links nach rechts; über parallel %
+  markiere alle Blätter von A (Array der Blätter) (ohne linkestes %
+   und rechtestes) wachsend von links nach rechts; über parallel %
    Prefix mit gewicht w(v) = 0 wenn v innerer Knoten, w(v)=1 wenn %
    v Blatt;
-  \For{\ceil{\log (n+1)}}{
-  RAKE auf $A_{odd} = \{v_{i}: i odd\}$, die linke Söhne sind;
-  RAKE auf Rest von $A_{odd}$ ;
-  A := $A_{even}$ ;
-}
+  \For{$\ceil{\log (n+1)}$}{
+    RAKE auf $A_{odd} = \{v_{i}: i odd\}$, die linke Söhne sind;
+    RAKE auf Rest von $A_{odd}$ ;
+    $A := A_{even}$ ;
+  }
+\label{alg:tree_contr}
 \end{algorithm}
 
 % Hier fehlt was!
