--- a/hinrichs-fourierana/skript.latex
+++ b/hinrichs-fourierana/skript.latex
@@ -1212,10 +1212,211 @@ Manchmal verwenden wir eine andere Bezeichnung: $\FF f=\hat{f}$.
   \end{gather*}
 \end{satz}
 
-
-
-
 \todo{Nummerierung der Sätze noch anpassen}
+
+\section{Die Fouriertransformation in \texorpdfstring{$L_{p}(\R^{n})$}{Lp(Rn)}}
+
+\begin{bemerk}
+  Auf dem Torus haben wir $L_{p}(\T)\subseteq L_{q}(\T)$ für $1\leq 1\leq p
+  \infty$ betrachtet, $\norm{f|L_{q}}\leq\norm{f|L_{p}}$. Insbesondere gilt,
+  $L_{p}(\T)\subseteq L_{1}(\T)$ für $p\geq1$, d.\,h. die
+  Fourierreihenentwicklung ist wohldefiniert für $f\in L_{p}$ mit $1\leq
+  p\leq\infty$. Anders sieht es im $\R^{n}$ aus. Man hat
+  $L_{p}(\R^{n})\subseteq L_{q}(\R^{n})\Leftrightarrow p=q$. (Übung: Beispiele
+  hierfür finden.)
+
+  Das Problem ist, die Fouriertransformation für $f\in L_{p}(\R^{n})$ mit
+  $p>1$ zu finden.
+\end{bemerk}
+
+Wir wählen zunächst den Ansatz: Fouriertransformation definiert für $f\in
+C^{\infty}_{c}(\R^{n})$. Diese sind dicht in $L_{p}(\R^{n})$. Es ist $f\in
+L_{p}\leadsto f_{j}\xrightarrow{L_{p}} f$ mit $f_{j}\in
+C^{\infty}_{c}(\R^{n})$ und $\hat{f}_{j}\xrightarrow{?}\hat{f}$. Das gibt
+Probleme: Konvergenz in welchem Sinne, in welchem Funktionenraum liegt
+$\hat{f}$?
+
+Der zweite Ansatz sieht wie folgt aus: Interpolation mit Hilfe des
+Riesz-Thorin-Theorems.
+
+Mit der Interpolation kann man die folgende Frage lösen: Man hat einen
+linearen und beschränkten Operator $T\colon L_{1}\rightarrow L_{1}$ und
+$T\colon L_{2}\rightarrow L_{2}$. Folgt daraus $T\colon L_{p}\rightarrow
+L_{p}$ linear und beschränkt für $1<p<2$? Eine Antwort gibt das
+Riesz-Thorin-Theorem.
+
+\begin{satz}[Riesz-Thorin-Theorem]
+  Sei $(M,\mu), (N,\nu)$ Maßräume, die $\sigma$-endlich sind. Weiter sei $T$
+  ein linearer Operator, der wie folgt definiert ist:
+  \begin{gather*}
+    T\colon L_{p_{0}}(M,\mu)\cap L_{p_{1}}(M,\mu)\rightarrow
+       L_{q_{0}}(N,\nu)\cap L_{q_{1}}(N,\nu)
+  \end{gather*}
+  für gewisse $1\leq p_{0}, p_{1}, q_{0}, q_{1}\leq\infty$ mit
+  $\norm{Tf|L_{q_{i}}}\leq c_{i}\norm{f| L_{p_{i}}}$ für $i=0,1$. Seien $p,q$
+  gegeben durch:
+  \begin{gather*}
+    \frac{1}{p}= \frac{1-\Theta}{p_{0}}+\frac{\Theta}{p_{1}}\qquad
+       \frac{1}{q} = \frac{1-\Theta}{q_{0}} +\frac{\Theta}{q_{1}}
+  \end{gather*}
+  für ein $\Theta\in(0,1)$. Dann gilt
+  \begin{gather*}
+    \norm{Tf|L_{q}}\leq C\norm{f|L_{p}} \quad \forall f\text{ mit }
+       C=C^{1-\Theta}_{0}-C^{\Theta}_{1}
+  \end{gather*}
+  Praktisch heißt das: Ist $T$ ein linearer beschränkter Operator von
+  $L_{p_{0}}(M,\mu)\rightarrow L_{q_{0}}(N,\nu)$ und
+  $L_{p_{1}}(M,\mu)\rightarrow L_{q_{1}}(N,\nu)$. Dann ist $T\colon
+  L_{p}(M,\mu)\rightarrow L_{q}(N,\nu)$ beschränkt.
+\end{satz}
+
+\begin{bsp}
+  \begin{enumerate}
+    \item Sei $T\colon L_{1}\rightarrow L_{1}$ und $T\colon L_{2}\rightarrow
+    L_{2}$ beschränkt linear. Dann ist $p_{0}=1=q_{0}$ und $p_{1}=2=q_{1}$.
+    Weiter ist $\nicefrac{1}{p}=\frac{1-\Theta}{1}+\frac{\Theta}{2}=
+    1-\nicefrac{\Theta}{2}=\nicefrac{1}{q}$ mit $p\in(1,2)$. Das
+    Riesz-Thorin-Theorem liefert $T\colon L_{p}\rightarrow L_{p}$ beschränkt
+    und $\norm{T\colon L_{p}\rightarrow L_{q}}\leq \norm{T\colon
+    L_{p_{0}}\rightarrow L_{q_{0}}}^{1-\Theta}\times \norm{T\colon
+    L_{p_{1}}\rightarrow L_{q_{1}}}$.
+   \item Fourierreihen: $\hat{ }\colon L_{1}(\T)\rightarrow\ell_{\infty}(\Z)$
+    folgt aus der Definition. Weiter hatten wir $\hat{ }\colon
+    L_{2}\rightarrow \ell_{2}(\Z)$ (Parselvalsche Gleichung). Somit ist
+    $p_{0}=1, q_{0}=\infty, p_{1}=2, q_{1}=2$ und $\nicefrac{1}{p}=
+    \frac{1-\Theta}{1}+\nicefrac{\Theta}{2}=1-\nicefrac{\Theta}{2}$ sowie
+    $\nicefrac{1}{q}=\frac{1-\Theta}{\infty}+\nicefrac{\Theta}{2}=
+    \nicefrac{\Theta}{2}$. Also gilt
+    $\nicefrac{1}{p}+\nicefrac{1}{q}=1\leadsto q=p'$ (konjugierter Index zu
+    $p$). Das Theorem liefert nun, $\hat{ }\colon L_{p}(\T)\rightarrow
+    \ell_{p'}(\Z)$, d.\,h.
+    \[\left(\sum_{j\in\Z}\abs{\hat{f}(j)^{p'}}\right)^{\nicefrac{1}{p'}} \leq
+    \norm{f| L_{p}}= \left(\frac{1}{2\pi} \int_{0}^{2\pi}
+    \abs{f(x)}^{p}\,dx\right)^{\nicefrac{1}{p}}\]
+    Die obige Gleichung heißt \highl{Haussdorff-Young-Ungleichung} für $1\leq
+    p\leq2$
+  \end{enumerate}
+\end{bsp}
+
+\subsection{Der Hilbertraumfall $p=2$}
+
+Für $f,g\in L_{2}(\R^{n})$ gilt $\langle f,g\rangle=\int_{\R^{n}}
+f\overline{g}= \int f(x)\overline{g(x)}\,dx$ und weiter $\norm{f|L_{2}}=
+\sqrt{\langle f,f\rangle}=\sqrt{\int \norm{f}^{2}}$. Dann gilt folgender Satz.
+
+\begin{satz}\label{satz:241}
+  Sei $f\in C^{\infty}_{c}(\R^{n})$. Dann gilt
+  \begin{gather*}
+    \norm{\hat{f}| L_{2}} = \norm{f| L_{2}}\qquad
+    \int\abs{\hat{f}^{2}} = \int\abs{f}^{2}
+  \end{gather*}
+  Die Gleichung heißt \highl{Plancherel-Gleichung}.
+  \begin{proof}
+    Wir betrachten $g=f*\tilde{f}\in C^{\infty}_{c}(\R^{n})$ und es ergibt sich:
+    \begin{align*}
+      \hat{g} &= (2\pi)^{\nicefrac{N}{2}} \hat{f} \hat{\tilde{f}} =
+	 (2\pi)^{\nicefrac{N}{2}} \hat{f} \hat{\tilde{f}}\\
+      &= (2\pi)^{\nicefrac{N}{2}} \hat{f}\overline{\hat{f}} =
+	 (2\pi)^{\nicefrac{N}{2}} \abs{\hat{f}}^{2}
+    \end{align*}
+    Der Satz von Gauß-Weierstraß liefert nun:
+    \begin{align*}
+      g(0) &= (2\pi)^{-\nicefrac{N}{2}} \int \hat{g}\\
+      f*\tilde{f}(0) &= \int_{\R^{n}} f(-x)\tilde{f}(x)\,dx\\
+      &= \int_{\R^{n}} f(-x) \overline{f(-x)}\,dx = \int_{\R^{n}} f(x)
+	 \overline{f(x)}\,dx\\
+      &= \int \abs{f}^{2}\\
+      (2\pi)^{-\nicefrac{N}{2}} \int\hat{g} &= \int \abs{\hat{f}}^{2}
+	 \Rightarrow \int \abs{f}^{2}= \int \abs{\hat{f}}^{2}
+    \end{align*}
+  \end{proof}
+\end{satz}
+
+Damit können wir die Fouriertransformation auf $L_{2}$ definieren:
+
+\begin{defini}
+  Sei $f\in L_{2}(\R^{n})$. Dann definieren wir die Fouriertransformation
+  $\hat{f}$ folgendermaßen: Wähle Folge
+  \begin{gather*}
+    f_{j}\in C^{\infty}_{c}(\R^{n}) \text{ mit } f_{j}\xrightarrow{L_{2}} f
+  \end{gather*}
+  und setzen
+  \begin{gather*}
+    \hat{f}= \lim_{j\rightarrow\infty} \hat{f}_{j}
+  \end{gather*}
+\end{defini}
+
+\begin{bemerk}
+  Existenz von $\lim\hat{f}_{j}$ in $L_{2}$:\\
+  Wir wissen, dass $(f_{j})$ Cauchyfolgen in $L_{2}$ sind. Nach
+  \autoref{satz:241} ist $(\hat{f}_{j})$ auch eine Cauchyfolge in $L_{2}$.
+  Damit existiert der Grenzwert in $L_{2}$.
+
+  Eindeutigkeit:\\
+  Wir haben $g_{j}\rightarrow f_{j}\Rightarrow f_{j}-g_{j}\rightarrow0 \Rightarrow
+  \hat{f}_{j}-\hat{g}_{j}\rightarrow0\Rightarrow \lim \hat{f}_{j}= \lim
+  \hat{g}_{j}$
+\end{bemerk}
+
+\begin{bemerk}
+  Für $f\in L_{1}\cap L_{2}$ gilt $\hat{f}=\hat{f}$ fast-überall. Dabei
+  bezeichnet das erste $\hat{f}$ die ursprüngliche Definition und das zweite
+  die $L_{2}$-Definition. Man kann beweisen, dass
+  $(2\pi)^{-\nicefrac{N}{2}}\int_{\abs{x}\leq R} f(x)
+  e^{-ix\xi}\,dx\xrightarrow{L_{2}} \hat{f}$ für alle $f\in L_{2}$.
+\end{bemerk}
+
+\begin{folg}[Plancherel-Formel]
+  Für $f\in L_{2}(\R^{n})$ gilt $\norm{\hat{f}|L_{2}}=\norm{f|L_{2}}$, d.\,h.
+  die Fouriertransformation ist ein \highl{isometrischer Isomorphismus} des
+  $L_{2}(\R^{n})$. Dies impliziert, dass die Fouriertransformation ein
+  unitärer Operator auf $L_{2}$ ist, d.\,h. $\langle\hat{f},
+  \hat{g}\rangle=\langle f,g\rangle$ für $f,g\in L_{2}$.
+  \begin{proof}
+    Der erste Teil folgt aus dem \autoref{satz:241} und der Definition. Zum
+    zweiten Teil: sei $H$ ein Hilbertraum und $T$ ein isometrischer
+    Isomorphismus auf $H$, d.\,h. $\norm{Tx}=\norm{x}$ für $x\in H$. Dann ist
+    $T$ unitär, d.\,h. $\langle Tx, Ty\rangle=\langle x,y\rangle$.
+
+    Es gilt für $x,y\in H$:
+    \begin{align*}
+      4\langle x,y\rangle &= \norm{x+y}^{2} - \norm{x-y}^{2} +
+	 i\norm{x+iy}^{2}- i\norm{x-iy}^{2}\\
+      \norm{x+y}^{2} &= \langle x+y,x+y\rangle= \langle x,x\rangle+ \langle
+	 y,y\rangle+ \langle x,y\rangle+ \langle y,x\rangle\\
+      \norm{x-y}^{2} &= -\langle x,y\rangle - \langle y,x\rangle\\
+      i\norm{x+iy}^{2} &= i\langle x,x\rangle + i\langle iy,iy\rangle +
+	 -\langle x,iy\rangle+ \langle iy,x\rangle\\
+      i\norm{x-iy}^{2} &= -i\langle x,iy\rangle-\langle iy,x\rangle
+    \end{align*}
+    Nach Voraussetzung kann man ein $T$ in die Norm multiplizieren ohne dass
+    sich etwas ändert. Also ergibt sich die Behauptung.
+  \end{proof}
+\end{folg}
+
+%% satz 242
+\begin{satz}
+  Sei $1<p<2$. Dann bildet die Fouriertransformation $L_{p}(\R^{n})$ in
+  $L_{p'}(\R^{n})$ ab und es gilt
+  \begin{gather*}
+    \norm{\hat{f}|L_{p'}}\leq (2\pi)^{N(\nicefrac{1}{p}-\nicefrac{1}{2})}
+       \norm{f|L_{p}}
+  \end{gather*}
+  Auch diese Formel bezeichnet man als \highl{Haussdorff-Young-Ungleichung}.
+  \begin{proof}
+    Der Beweis ist eine Anwendung des Riesz-Thorin-Theorems: $\hat{ }\colon
+    L_{1}(\R^{n})\rightarrow L_{\infty}(\R^{n})$ mit
+    $C_{0}=(2\pi)^{\nicefrac{N}{2}}$ und $\hat{ }\colon
+    L_{2}(\R^{n})\rightarrow L_{2}(\R^{n})$ mit $C_{1}=1$ sowie $\hat{ }\colon
+    L_{p}(\R^{n})\rightarrow L_{p'}(\R^{n})$ mit $\nicefrac{1}{p}=
+    \nicefrac{\Theta}{2}, 1-\Theta=2(\nicefrac{1}{p}-\nicefrac{1}{2}$
+  \end{proof}
+\end{satz}
+
+
+
+
+
 
 \appendix
 \chapter{Übungsaufgaben}
