--- a/hecker-parallel/skript.latex
+++ b/hecker-parallel/skript.latex
@@ -2169,17 +2169,16 @@ Verbesserung gegenüber dem Seriellen darstellt.
 
 % Hier fehlt was! -> Beispielgrafik
 
-\begin{description}
-  \item[Theorem:] Die Kontraktion funktioniert auf einer EREW-PRAM in 
+\begin{satz}
+  Die Kontraktion funktioniert auf einer EREW-PRAM in 
   $O(\log n)$ \Time und $O(n)$ \Work.
-\end{description}
 
-% Proof mal deutsch formulieren
-
-\begin{proof}
-  Es gibt m Blätter \rigtharrow nach Schritt \floor{$m_{2}$} Blätter \rightarrow
-  nach \ceil{$\log (n+1)$} Iterationen fertig.
-\end{proof}
+  % Proof mal deutsch formulieren
+  \begin{proof}
+    Es gibt m Blätter $\rigtharrow$ nach Schritt $\floor{m_{2}}$ Blätter $\rightarrow$
+    nach $\ceil{\log (n+1)}$ Iterationen fertig.
+  \end{proof}
+\end{satz}
 
 % Grafik: "`B"' Kreise mit Zahlen: 8 3 4 5 2 11 15 17 n=$2^{l}$
 
