--- a/hecker-parallel/skript.latex
+++ b/hecker-parallel/skript.latex
@@ -2175,7 +2175,7 @@ Verbesserung gegenüber dem Seriellen darstellt.
 
   % Proof mal deutsch formulieren
   \begin{proof}
-    Es gibt m Blätter $\rigtharrow$ nach Schritt $\floor{m_{2}}$ Blätter $\rightarrow$
+    Es gibt m Blätter $\rightarrow$ nach Schritt $\floor{m_{2}}$ Blätter $\rightarrow$
     nach $\ceil{\log (n+1)}$ Iterationen fertig.
   \end{proof}
 \end{satz}
